--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="container">
 			<div class="card-white" id="introduction">
 				<h1>Hello everyone, I'm Changhao Li</h1>
-				<img src="images/changhaoli-image.jpeg" class="img-circle" alt="Changhao Li">
+				<img src="changhaoli-image.jpeg" class="img-circle" alt="Changhao Li">
 				<p>
 					Hi! I'm Changhao Li and I'm a Master in Management (Grande École) student at HEC Paris. Enchanté!
 				</p>
