--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</div>
 
 			<div class="card-white">
-				<h2>Synphony Orchestra</h2>
+				<h2>Symphony Orchestra</h2>
 				<p>
 					Orchestra is the most harmonious performance on planet Earth.
 				</p>
