--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 					Hi! I'm Changhao Li and I'm a Master in Management (Grande École) student at HEC Paris. Enchanté!
 				</p>
 				<p>
-					<a href="https://www.linkedin.com/in/owen-changhao-li/" class="btn-blue">Discover Changhao Li</a>
+					<a href="https://www.linkedin.com/in/owen-changhao-li/" class="btn-blue">Discover Changhao on LinkedIn</a>
 				</p>
 			</div>
 
 			<div class="card-white">
-				<h2>Symphony Orchestra</h2>
+				<h2>Education</h2>
 				<p>
-					Orchestra is the most harmonious performance on planet Earth.
+					Master in Management (Grande École), HEC Paris
 				</p>
 				<p>
-					I really love Bach, Devorak and Elgar's pieces!
+					Bachelor of Advanced Computing (Honours I), University of Sydney
 				</p>
 			</div>
 			
@@ -60,10 +60,10 @@
 						<a href="https://www.facebook.com/sysulchljp"><i class="fa-brands fa-square-facebook"></i></a>
 					</li>
 					<li>
-						<a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+						<a href="https://twitter.com/BarovOwenLee"><i class="fa-brands fa-square-twitter"></i></a>
 					</li>
 					<li>
-						<a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+						<a href="https://www.instagram.com/owenchanghaoli/"><i class="fa-brands fa-square-instagram"></i></a>
 					</li>
 				</ul>
 			</div>
