--- a/index.html
+++ b/index.html
@@ -31,17 +31,26 @@
 			<div class="card-white">
 				<h2>Education</h2>
 				<p>
-					Master in Management (Grande École), HEC Paris
+					Master in Management, Hautes Études Commerciales de Paris
 				</p>
 				<p>
-					Bachelor of Advanced Computing (Honours I), University of Sydney
+					Bachelor of Advanced Computing (Hons), University of Sydney
 				</p>
 			</div>
 			
 			<div class="card-white">
-				<h2>Football and Rugby</h2>
+				<h2>Research</h2>
 				<p>
-					I love football (I won't call it soccer!) and rugby.
+					Human-Computer Interaction (HCI)
+				</p>
+				<p>
+					Natural Language Processing (NLP)
+				</p>
+				<p>
+					Design Computing
+				</p>
+				<p>
+					Usability Engineering
 				</p>
 			</div>
 			
