--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</div>
 			
 			<div class="card-white">
-				<h2>Research</h2>
+				<h2>Research Interest</h2>
 				<p>
 					Human-Computer Interaction (HCI)
 				</p>
@@ -55,9 +55,25 @@
 			</div>
 			
 			<div class="card-white">
-				<h2>Tech Consulting</h2>
+				<h2>Career</h2>
 				<p>
 					I would like to work in the tech consulting industry.
+				</p>
+			</div>
+
+			<div class="card-white">
+				<h2>Hobby</h2>
+				<p>
+					I play all the common sports: football, volleyball, ping-pong, tennis, rugby...
+				</p>
+				<p>
+					I also enjoy listening to symphony orchestras when I feel exhausted.
+				</p>
+				<p>
+					Someone said that music is the best cure for all mental illnesses!
+				</p>
+				<p>
+					I think symphony orchestra is the most harmonious activity on Earth.
 				</p>
 			</div>
 			
