--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<title>Changhao Li's Profile</title>
-		<meta name="description" content="This is the personal profile of CHanghao Li">
+		<meta name="description" content="This is the personal profile of Changhao Li">
 		<meta charset="UTF-8">
 		
 		<!-- Font Awesome -->
@@ -29,7 +29,7 @@
 			</div>
 
 			<div class="card-white">
-				<h2>Education</h2>
+				<h2>Education 📖</h2>
 				<p>
 					Master in Management, Hautes Études Commerciales de Paris
 				</p>
@@ -39,7 +39,7 @@
 			</div>
 			
 			<div class="card-white">
-				<h2>Research Interest</h2>
+				<h2>Research Interest 💡</h2>
 				<p>
 					Human-Computer Interaction (HCI)
 				</p>
@@ -55,14 +55,14 @@
 			</div>
 			
 			<div class="card-white">
-				<h2>Career</h2>
+				<h2>Career 🖥️</h2>
 				<p>
 					I would like to work in the tech consulting industry.
 				</p>
 			</div>
 
 			<div class="card-white">
-				<h2>Hobby</h2>
+				<h2>Hobby 🥰</h2>
 				<p>
 					I play all the common sports: football, volleyball, ping-pong, tennis, rugby...
 				</p>
@@ -78,7 +78,7 @@
 			</div>
 			
 			<div class="card-white">
-				<h2>Follow me</h2>
+				<h2>Follow me ℹ️</h2>
 				<ul class="list-inline">
 					<li>
 						<!-- Use Facebook Icon on Font Awesome -->
