--- a/index.html
+++ b/index.html
@@ -29,22 +29,19 @@
 			</div>
 
 			<div class="card-white">
-				<h2>Education 📖</h2>
+				<h2>📖 Education</h2>
 				<p>
-					Master in Management, Hautes Études Commerciales de Paris
+					Master in Management, École des Hautes Études Commerciales de Paris
 				</p>
 				<p>
-					Bachelor of Advanced Computing (Hons), University of Sydney
+					Bachelor of Advanced Computing (Honours I), the University of Sydney
 				</p>
 			</div>
 			
 			<div class="card-white">
-				<h2>Research Interest 💡</h2>
+				<h2>💡 Research Interest</h2>
 				<p>
 					Human-Computer Interaction (HCI)
-				</p>
-				<p>
-					Natural Language Processing (NLP)
 				</p>
 				<p>
 					Design Computing
@@ -52,17 +49,23 @@
 				<p>
 					Usability Engineering
 				</p>
+				<p>
+					Natural Language Processing (NLP)
+				</p>
+				<p>
+					Scientific Commercialization
+				</p>
 			</div>
 			
 			<div class="card-white">
-				<h2>Career 🖥️</h2>
+				<h2>🖥️ Career</h2>
 				<p>
-					I would like to work in the tech consulting industry.
+					I would like to work in the <em>tech-consulting</em> industry.
 				</p>
 			</div>
 
 			<div class="card-white">
-				<h2>Hobby 🥰</h2>
+				<h2>🥰 Hobby</h2>
 				<p>
 					I play all the common sports: football, volleyball, ping-pong, tennis, rugby...
 				</p>
@@ -72,13 +75,10 @@
 				<p>
 					Someone said that music is the best cure for all mental illnesses!
 				</p>
-				<p>
-					I think symphony orchestra is the most harmonious activity on Earth.
-				</p>
 			</div>
 			
 			<div class="card-white">
-				<h2>Follow me ℹ️</h2>
+				<h2>Follow me</h2>
 				<ul class="list-inline">
 					<li>
 						<!-- Use Facebook Icon on Font Awesome -->
