--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="card-white">
 				<h2>🖥️ Career</h2>
 				<p>
-					I would like to work in the <em>tech-consulting</em> industry.
+					I would like to work in the <b>tech-consulting</b> industry.
 				</p>
 			</div>
 
