--- a/index.html
+++ b/index.html
@@ -65,6 +65,31 @@
 			</div>
 
 			<div class="card-white">
+				<h2>🧑‍💻 Experience</h2>
+				<p>
+					2023.01-2023.04 Data Analyst Intern (Off-cycle), SHIEN @Shenzhen, China
+				</p>
+				<p>
+					2022.09-2022.12 Human Resources Intern (Off-cycle), Target @Shenzhen, China
+				</p>
+				<p>
+					2022.07-2022.08 Data Analyst Intern (Summer), OPPO @Dongguan, China
+				</p>
+				<p>
+					2021.12-2022.02 Quantitative Risk Analyst Intern (Winter), JD.com @Beijing, China
+				</p>
+				<p>
+					2021.07-2021.09 Wealth Management Intern (Summer), GF Securities @Guangzhou, China
+				</p>
+				<p>
+					2021.01-2021.04 English-Chinese Translator Intern (Off-cycle), Barron's @Beijing, China
+				</p>
+				<p>
+					2020.08-2020.12 Operations Trainee Intern (Off-cycle), JOYY (now Baidu) @Guangzhou, China
+				</p>
+			</div>
+
+			<div class="card-white">
 				<h2>🥰 Hobby</h2>
 				<p>
 					I play all the common sports: football, volleyball, ping-pong, tennis, rugby...
