--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <html>
 
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VYHB37BR1G"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-VYHB37BR1G');
+		</script>
 		<title>Changhao Li's Profile</title>
 		<meta name="description" content="This is the personal profile of Changhao Li">
 		<meta charset="UTF-8">
@@ -14,6 +23,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 	</head>
+	
 
 	<body>
 		<div class="container">
